--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
+    "@react-navigation/drawer": "^7.0.12",
     "@react-navigation/elements": "^2.0.2",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.0.7",
+    "@react-navigation/stack": "^7.0.12",
     "expo": "~52.0.6",
     "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.1",
@@ -36,16 +38,20 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.0.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "react-router-native": "^6.28.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.1",
