--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "^2.10.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/drawer": "^7.0.12",
     "@react-navigation/elements": "^2.0.2",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/stack": "^7.0.12",
+    "axios": "^1.7.8",
     "expo": "~52.0.6",
     "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.1",
@@ -38,6 +40,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
