--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "extra": {
+      "API_URL": "http://10.20.16.225:8000"
+    },
     "ios": {
       "supportsTablet": true
     },
