--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#bababa"
+        "backgroundColor": "#2a2a2a"
       }
     },
     "web": {
@@ -33,7 +33,7 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#2a2a2a"
         }
       ],
       "expo-asset"
